--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Unique Website</title>
+    <title>Porsche Systems</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -45,7 +45,7 @@
 </head>
 <body>
     <header>
-        <h1>Unique Website</h1>
+        <h1>Porsche Systems</h1>
     </header>
     <div class="container">
         <div class="side-menu">
@@ -58,7 +58,7 @@
             </ul>
         </div>
         <div class="main-content">
-            <h2>Welcome to our unique website</h2>
+            <h2>Welcome to our Porsche Systems</h2>
             <p>This website incorporates unique concepts, balanced UX, compelling storytelling, and well-organized layout to provide an engaging experience for our users.</p>
         </div>
     </div>
