--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
         <div class="main-content">
             <h2>Welcome to our Porsche Systems</h2>
-            <p>This website incorporates unique concepts, balanced UX, compelling storytelling, and well-organized layout to provide an engaging experience for our users.</p>
+            <p>Vente de kawkaw</p>
         </div>
     </div>
 </body>
