--- a/index.html
+++ b/index.html
@@ -3,49 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Porsche Systems</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-        header {
-            background-color: #333;
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
-        .container {
-            display: flex;
-        }
-        .side-menu {
-            background-color: #f0f0f0;
-            padding: 20px;
-            width: 200px;
-        }
-        .main-content {
-            padding: 20px;
-            width: calc(100% - 200px);
-        }
-        ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        li a {
-            color: #333;
-            display: block;
-            padding: 8px 16px;
-            text-decoration: none;
-        }
-        li a:hover {
-            background-color: #f0f0f0;
-        }
-    </style>
+    <title>Unique Website</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Porsche Systems</h1>
+        <h1>Unique Website</h1>
     </header>
     <div class="container">
         <div class="side-menu">
@@ -58,8 +21,8 @@
             </ul>
         </div>
         <div class="main-content">
-            <h2>Welcome to our Porsche Systems</h2>
-            <p>Vente de kawkaw</p>
+            <h2>Welcome to our unique website</h2>
+            <p>This website incorporates unique concepts, balanced UX, compelling storytelling, and well-organized layout to provide an engaging experience for our users.</p>
         </div>
     </div>
 </body>
