--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Unique Website</title>
+    <title>Porsche Systems Website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Unique Website</h1>
+        <h1>Porsche Systems</h1>
     </header>
     <div class="container">
         <div class="side-menu">
@@ -21,8 +21,8 @@
             </ul>
         </div>
         <div class="main-content">
-            <h2>Welcome to our unique website</h2>
-            <p>This website incorporates unique concepts, balanced UX, compelling storytelling, and well-organized layout to provide an engaging experience for our users.</p>
+            <h2>Welcome to our Porsche Systems website</h2>
+            <p>This is a test.</p>
         </div>
     </div>
 </body>
