--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h2>Menu</h2>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="doc/about.html">About</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
