--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div class="side-menu">
             <h2>Menu</h2>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="doc/about.html">About</a></li>
+                <li><a href=".index.html">Home</a></li>
+                <li><a href="./doc/about.html">About</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
