--- a/about.html
+++ b/about.html
@@ -10,22 +10,9 @@
     <header>
         <h1>About Me</h1>
     </header>
-    <main>
-        <section>
-            <h2>Introduction</h2>
-            <p>Insert your about information here.</p>
-        </section>
-        <section>
-            <h2>Skills</h2>
-            <p>List your skills here.</p>
-        </section>
-        <section>
-            <h2>Experience</h2>
-            <p>List your experience here.</p>
-        </section>
-    </main>
+    
     <footer>
-        <p>&copy; 2023 Your Name</p>
+        <p>&copy; 2023 Mohamed Hami</p>
     </footer>
 </body>
 </html>
