--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <div class="side-menu">
             <h2>Menu</h2>
             <ul>
-                <li><a href=".index.html">Home</a></li>
-                <li><a href="./doc/about.html">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="./about.html">About</a></li>
+                <li><a href="./services.html">Services</a></li>
+                <li><a href="./contact.html">Contact</a></li>
             </ul>
         </div>
         <div class="main-content">
