--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <h2>Menu</h2>
             <ul>
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="./about.html">About</a></li>
-                <li><a href="./services.html">Services</a></li>
-                <li><a href="./contact.html">Contact</a></li>
+                <li><a href="./doc/about.html">About</a></li>
+                <li><a href="./doc/services.html">Services</a></li>
+                <li><a href="./doc/contact.html">Contact</a></li>
             </ul>
         </div>
         <div class="main-content">
