--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <div class="side-menu">
             <h2>Menu</h2>
             <ul>
-                <li><a href="/doc/about.html">About</a></li>
-                <li><a href="/doc/services.html">Services</a></li>
-                <li><a href="/doc/contact.html">Contact</a></li>
+                <li><a href="./doc/about.html">About</a></li>
+                <li><a href="./doc/services.html">Services</a></li>
+                <li><a href="./doc/contact.html">Contact</a></li>
             </ul>
         </div>
         <div class="main-content">
